fixed horizontal overflow IOS

--- a/src/App.css
+++ b/src/App.css
@@ -52,5 +52,4 @@
 
 html, body {
   max-width: 100%;
-  overflow-x: hidden;
 }
